--- a/BeginCollectionItem/BeginCollectionItem.csproj
+++ b/BeginCollectionItem/BeginCollectionItem.csproj
@@ -47,6 +47,10 @@
     <Compile Include="HtmlPrefixScopeExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="BeginCollectionItem.nuspec" />
+    <None Include="content\Web.config.transform" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\nuget.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it.
