Fix incorrect namespace and web.config transform.

--- a/BeginCollectionItem/BeginCollectionItem.nuspec
+++ b/BeginCollectionItem/BeginCollectionItem.nuspec
@@ -14,6 +14,6 @@
         <tags>MVC, HtmlHelper, BeginCollectionItem</tags>
     </metadata>
     <files>
-        <file src="content\*.*" target="content\" />
+        <file src="content\Views\*.*" target="content\Views\" />
     </files>
 </package>
