--- a/BeginCollectionItem/BeginCollectionItem.csproj
+++ b/BeginCollectionItem/BeginCollectionItem.csproj
@@ -49,7 +49,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="BeginCollectionItem.nuspec" />
-    <None Include="content\Web.config.transform" />
+    <None Include="content\Views\Web.config.transform" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\nuget.targets" />
