--- a/BeginCollectionItem/BeginCollectionItem.nuspec
+++ b/BeginCollectionItem/BeginCollectionItem.nuspec
@@ -1,16 +1,21 @@
 <?xml version="1.0"?>
 <package xmlns="http://schemas.microsoft.com/packaging/2011/08/nuspec.xsd">
-    <metadata>
-        <id>$id$</id>
-        <version>$version$</version>
-        <title>BeginCollectionItem HtmlHelper</title>
-        <authors>Authored by Steve Sanderson, NuGet Package by Dan Ludwig and hazzik</authors>
-        <licenseUrl>https://github.com/danludwig/BeginCollectionItem</licenseUrl>
-        <projectUrl>https://github.com/danludwig/BeginCollectionItem</projectUrl>
-        <!--<iconUrl>http://ICON_URL_HERE_OR_DELETE_THIS_LINE</iconUrl>-->
-        <requireLicenseAcceptance>false</requireLicenseAcceptance>
-        <description>$description$</description>
-        <releaseNotes>Updated project to install a shared Collection.cshtml editor template for use with the BeginCollectionItem HTML Helper.</releaseNotes>
-        <tags>MVC, HtmlHelper, BeginCollectionItem</tags>
-    </metadata>
+  <metadata>
+    <id>$id$</id>
+    <version>$version$</version>
+    <title>BeginCollectionItem HtmlHelper</title>
+    <authors>Authored by Steve Sanderson, NuGet Package by Dan Ludwig and hazzik</authors>
+    <licenseUrl>https://github.com/danludwig/BeginCollectionItem</licenseUrl>
+    <projectUrl>https://github.com/danludwig/BeginCollectionItem</projectUrl>
+    <!--<iconUrl>http://ICON_URL_HERE_OR_DELETE_THIS_LINE</iconUrl>-->
+    <requireLicenseAcceptance>false</requireLicenseAcceptance>
+    <description>
+      This Html Helper leverages the default model binder in ASP.NET MVC 2 and higher to materialize viewmodel collection properties from an HTTP POST.
+    </description>
+    <releaseNotes>
+      This Html Helper leverages the default model binder in ASP.NET MVC 2 and higher to materialize viewmodel collection properties from an HTTP POST.
+      Version 1.2.1.0 adds a BeginCollectionItem overload that takes a System.IO.TextWriter and works with Razor's @helper methods.
+    </releaseNotes>
+    <tags>MVC, HtmlHelper, BeginCollectionItem</tags>
+  </metadata>
 </package>
